init + add Heroes services & component

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300;600;800&display=swap');
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+body {
+  margin: 2em;
+}
+
+/* everywhere else */
+* {
+  font-family: 'Gemunu Libre', sans-serif;
+}
