--- a/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
+++ b/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
@@ -1,5 +1,11 @@
-<h2> Welcome</h2>
-<ul>
+<h2>{{data.name}}</h2>
+<div class="img">
+<img src="">
+</div>
+<span>
+  {{data.description}}
+</span>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Quitter</button>
+</mat-dialog-actions>
 
-</ul>
-<button>Quitter</button>
