--- a/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
+++ b/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
@@ -1,11 +1,20 @@
-<h2>{{data.name}}</h2>
-<div class="img">
-<img src="">
+<div class="container">
+<h1>{{data.name}}</h1>
+  <div class="row">
+    <div class="col">
+      <div class="img">
+        <img src={{data.image}} class="img-modal">
+        </div>
+    </div>
+    <div class="col">
+      <span class="description-modal">
+        {{data.description}}
+      </span>
+    </div>
+  </div>
+  <mat-dialog-actions>
+    <button mat-button mat-dialog-close id="mat-button">Quitter</button>
+  </mat-dialog-actions>
 </div>
-<span>
-  {{data.description}}
-</span>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>Quitter</button>
-</mat-dialog-actions>
+
 
