--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -4,16 +4,15 @@
     (click)="openDialog(hero.name, hero.description, hero.image)"
     >
       <div class="card shadow-sm">
-        <img class="card-img-top" src={{hero.image}} alt="Card image cap">
-        <div class="card-body">
+        <div class="card-header">
           <h3 class="card-title">{{hero.name | uppercase}}</h3>
-          <p class="card-text">{{hero.description}}</p>
         </div>
-        <hr>
-        <input id="name" class="px-2 mx-2 my-2" [(ngModel)]="hero.name" placeholder="name">
+        <div class="card-body">
+          <img class="card-img-top" src={{hero.image}} alt="Card image cap">
+        </div>
+        <!-- <input id="name" class="px-2 mx-2 my-2" [(ngModel)]="hero.name" placeholder="name"> -->
       </div>
     </div>
   </ng-container>
 </div>
-<app-heroes-details-modal></app-heroes-details-modal>
 
