--- a/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
+++ b/src/app/modal/heroes-details-modal/heroes-details-modal.component.html
@@ -1,5 +1,6 @@
 <div class="container">
 <h1>{{data.name}}</h1>
+  <!-- <input id="name" class="px-2 mx-2 my-2" [(ngModel)]="data.name" placeholder="name"> -->
   <div class="row">
     <div class="col">
       <div class="img">
@@ -9,12 +10,15 @@
     <div class="col">
       <span class="description-modal">
         {{data.description}}
+        <!-- <input id="update-description-modal" class="px-2 py-2" [(ngModel)]="data.description" placeholder="name"> -->
       </span>
     </div>
   </div>
   <mat-dialog-actions>
+    <button class="update-data" (click)="handleUpdateValue()">Modifier</button>
     <button mat-button mat-dialog-close id="mat-button">Quitter</button>
   </mat-dialog-actions>
+
 </div>
 
 
