--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
       <div class="col-8">
         <app-heroes></app-heroes>
       </div>
-      <div class="col-4"></div>
+      <div class="col-4">
+        <app-messages></app-messages>
+      </div>
     </div>
   </div>
 
