--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,7 +1,7 @@
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
   <ng-container *ngFor="let hero of heroes, index as i">
     <div class="col align-items-stretch"
-    (click)="openDialog(hero.name, hero.description, hero.image)"
+    (click)="openDialog(hero.id, hero.name, hero.description, hero.image)"
     >
       <div class="card shadow-sm">
         <div class="card-header">
