updated modal + add form  + fix bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
-<h1 class="title-h1">{{title}}</h1>
-<div class="section py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-8">
-        <app-heroes></app-heroes>
-      </div>
-      <div class="col-4">
-        <app-messages></app-messages>
-      </div>
-    </div>
-  </div>
-</div>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
