--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<h1 class="title-h1">{{title}}</h1>
+
+<nav class="navbar navbar-light  justify-content-between">
+  <h1 class="title-h1"><a routerLink="" id="a-title">{{title}}</a></h1>
+  <form class="form-inline">
+    <button type="button" class="btn btn-dark" ><a routerLink="login" id="a-login">Se connecter</a></button>
+  </form>
+</nav>
