--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,17 +1,19 @@
 <form class="form-signin py-5">
   <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-  <div class="mb-3">
+<form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
+  <div class="form-group mb-3">
     <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+    <input type="email" id="inputEmail" class="form-control" placeholder="Email" formControlName="email" required>
   </div>
-  <div class="mb-3">
+  <div class="form-group mb-3">
     <label for="inputPassword" class="sr-only">Mot de passe</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" formControlName="password" required>
   </div>
   <div class=" mb-3 justify-content-between">
     <label>
       <a routerLink="" class="create-account">Créer un compte ?</a><small><a routerLink="" class="create-account ms-2">Retour</a></small>
     </label>
   </div>
-  <button type="button" class="btn btn-dark">Connexion</button>
+</form>
+  <button type="submit" class="btn btn-dark" [disabled]="userForm.invalid">Connexion</button>
 </form>
