--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,6 +6,13 @@
         <app-heroes></app-heroes>
       </div>
       <div class="col-4">
+        <div class="test">
+          <ul>
+            <li *ngFor="let user of users">
+              <p>{{user.email}} - {{user.password}}</p>
+            </li>
+          </ul>
+        </div>
         <app-messages></app-messages>
       </div>
     </div>
