--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<form class="form-signin py-5">
+<div class="form-signin py-5">
   <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
 <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
   <div class="form-group mb-3">
@@ -15,5 +15,5 @@
     </label>
   </div>
 </form>
-  <button type="submit" class="btn btn-dark" [disabled]="userForm.invalid">Connexion</button>
-</form>
+  <button type="submit" class="btn btn-dark" [disabled]="userForm.invalid" (click)="onSubmitForm()">Connexion</button>
+</div>
