--- a/src/app/components/four-oh-four/four-oh-four.component.html
+++ b/src/app/components/four-oh-four/four-oh-four.component.html
@@ -1,2 +1,4 @@
-<h2>Erreur 404</h2>
-<p>La page que vous cherchez n'existe pas !</p>
+<div class="four-oh-four">
+  <h1>404</h1>
+  <h2>La page que vous cherchez n'existe pas !</h2>
+</div>
