--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,6 @@
 <nav class="navbar navbar-light  justify-content-between">
   <h1 class="title-h1"><a routerLink="" id="a-title">{{title}}</a></h1>
   <form class="form-inline">
-    <button type="button" class="btn btn-dark" ><a routerLink="login" id="a-login">Se connecter</a></button>
+    <button type="button" class="btn btn-dark" routerLink='/login'>Se connecter</button>
   </form>
 </nav>
