--- a/src/app/components/four-oh-four/four-oh-four.component.html
+++ b/src/app/components/four-oh-four/four-oh-four.component.html
@@ -1,4 +1,4 @@
 <div class="four-oh-four">
   <h1>404</h1>
-  <h2>La page que vous cherchez n'existe pas !</h2>
+  <h2>La page que vous cherchez n'existe pas ! <small><a routerLink="" style="color: black;">retour</a></small></h2>
 </div>
