updated alert & login logout

--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,6 +1,10 @@
 <div *ngIf="messageService.messages.length" class="messages py-2 px-1">
   <hr>
-  <h2 style="text-align: center;">Messages</h2>
+  <h2 style="text-align: center;">Notifications</h2>
   <button class="clear mb-2" (click)="messageService.clear()">Clear messages</button>
-  <div class="message-list mb-1" *ngFor='let message of messageService.messages'> {{message}} </div>
+  <div class="message-list mb-1" *ngFor='let message of messageService.messages'>
+    <div class="alert alert-success" role="alert">
+      {{message}}
+    </div>
+  </div>
 </div>
