--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,12 @@
 
 body {
   margin: 2em !important;
+  background: url(./assets//img/background.jpg) no-repeat center center fixed !important; 
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
+  filter: opacity(95%) !important;
 }
 
 * {
