--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class=" mb-3 justify-content-between">
     <label>
-      <a routerLink="" class="create-account">Créer un compte ?</a><small><a routerLink="" class="create-account ms-2">Retour</a></small>
+      <small><a routerLink="" class="create-account ms-2">Retour</a></small>
     </label>
   </div>
 </form>
